--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,8 +41,8 @@ ol {
     position: fixed;
     top: 0;
     left: 0;
-    height: 5px;
-    width: 0%;
+    height: 0%;
+    width: 5px;
     background-color: #9034AA;
 }
 
